Run tests uninstalled

--- a/melissa-da_set_env.sh.in
+++ b/melissa-da_set_env.sh.in
@@ -5,12 +5,16 @@ export LD_LIBRARY_PATH=@ZeroMQ_INCLUDE_DIR@/../lib:$LD_LIBRARY_PATH
 export LD_LIBRARY_PATH=@CMAKE_INSTALL_PREFIX@/lib:$LD_LIBRARY_PATH
 export LD_LIBRARY_PATH=@FTI_PATH@/lib:$LD_LIBRARY_PATH
 export PDAF_PATH=@PDAF_PATH@
-export DATASET_PATH=@PDAF_PATH@/tutorial/inputs_online/
-export MELISSA_DA_PATH=@CMAKE_INSTALL_PREFIX@
+
+export MELISSA_DA_DATASET_PATH=@PDAF_PATH@/tutorial/inputs_online/
+
+export MELISSA_DA_PATH=@CMAKE_INSTALL_PREFIX@  # TODO:  unused? remove?
+
 export MELISSA_DA_SOURCE_PATH=@CMAKE_SOURCE_DIR@
+export MELISSA_DA_DATADIR=@DATADIR_INSTALL@
+export MELISSA_DA_WITH_FTI=@WITH_FTI@
+
 export MPIEXEC=@MPIEXEC@
 
 export PYTHONPATH=@CMAKE_INSTALL_PREFIX@/share/melissa-da/python:$PYTHONPATH
 
-
-export MELISSA_DA_WITH_FTI=@WITH_FTI@
