Add test with unresponsive / deadlocking runners
This fixes #19

--- a/examples/simulation1/CMakeLists.txt
+++ b/examples/simulation1/CMakeLists.txt
@@ -25,6 +25,11 @@ target_compile_definitions(simulation1-index-map PRIVATE -DWITH_INDEX_MAP)
 target_link_libraries(simulation1-index-map melissa_api)
 INSTALL(TARGETS simulation1-index-map RUNTIME DESTINATION bin)
 
+add_executable(simulation1-deadlock simulation.cxx)
+target_compile_definitions(simulation1-deadlock PRIVATE -DDEADLOCK)
+target_link_libraries(simulation1-deadlock melissa_api)
+INSTALL(TARGETS simulation1-deadlock RUNTIME DESTINATION bin)
+
 
 
 add_test(NAME "test-example-simulation1" COMMAND ${in_env} python3 ./script.py ${test_name} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
