--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,3 +9,14 @@ debian/9/amd64:
     - mkdir build
     - cd build
     - bash ../build-and-test.sh .. ~/PDAF-D_V1.15 ~/fti
+
+ubuntu/20.04:
+  image: datamove/ubuntu/20.04
+  tags:
+    - docker
+  script:
+    - export MALLOC_CHECK_=3
+    - export MALLOC_PERTURB_=1
+    - mkdir build
+    - cd build
+    - bash ../build-and-test.sh .. ~/PDAF-D_V1.15 ~/fti
