Do not buffer python output iin test cases

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,6 @@
 function(python_test test_name)
     #message("Source_dir: ${CMAKE_CURRENT_SOURCE_DIR}")
-    add_test(NAME ${test_name} COMMAND ${in_env} python3 ./tests.py ${test_name} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+    add_test(NAME ${test_name} COMMAND ${in_env} python3 -u ./tests.py ${test_name} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 endfunction()
 
 add_subdirectory(simulation1)
