--- a/examples/simulation1/CMakeLists.txt
+++ b/examples/simulation1/CMakeLists.txt
@@ -32,7 +32,7 @@ INSTALL(TARGETS simulation1-deadlock RUNTIME DESTINATION bin)
 
 
 
-add_test(NAME "test-example-simulation1" COMMAND ${in_env} python3 ./script.py ${test_name} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+add_test(NAME "test-example-simulation1" COMMAND ${in_env} python3 -u ./script.py ${test_name} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 python_test("test-check-stateless")
 
