Compile on juwels

--- a/api/CMakeLists.txt
+++ b/api/CMakeLists.txt
@@ -13,7 +13,7 @@ endif(INSTALL_ZMQ)
 
 add_custom_command(TARGET melissa_api
     PRE_BUILD
-    COMMAND ${CMAKE_Fortran_COMPILER} -E -cpp -x c -P
+    COMMAND gcc -E -cpp -x c -P
         ${CMAKE_CURRENT_SOURCE_DIR}/melissa_api.i.f90
         -o ${CMAKE_BINARY_DIR}/include/melissa_api.f90
     COMMAND sed ${CMAKE_BINARY_DIR}/include/melissa_api.f90
