--- a/melissa-da_set_env.sh.in
+++ b/melissa-da_set_env.sh.in
@@ -8,7 +8,7 @@ export PDAF_PATH=@PDAF_PATH@
 
 export MELISSA_DA_DATASET_PATH=@PDAF_PATH@/tutorial/inputs_online/
 
-export MELISSA_DA_PATH=@CMAKE_INSTALL_PREFIX@  # TODO:  unused? remove?
+export MELISSA_DA_PATH=@CMAKE_INSTALL_PREFIX@
 
 export MELISSA_DA_SOURCE_PATH=@CMAKE_SOURCE_DIR@
 export MELISSA_DA_DATADIR=@DATADIR_INSTALL@
