--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -87,6 +87,8 @@ add_python_test("test-never-connecting-runner"
     "${CMAKE_CURRENT_SOURCE_DIR}/test-never-connecting-runner.py")
 add_python_test("test-unresponsive-runner"
     "${CMAKE_CURRENT_SOURCE_DIR}/test-unresponsive-runner.py")
+add_python_test("test-python-assimilator"
+    "${CMAKE_CURRENT_SOURCE_DIR}/test_python_assimilator.py")
 
 # Should be the last test!
 add_python_test("test-cleanup"
