--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -31,8 +31,8 @@ target_include_directories(melissa_server PUBLIC ${CMAKE_SOURCE_DIR}/pdaf-wrappe
 target_include_directories(melissa_server PRIVATE ${PYTHON_INCLUDE_DIR})
 
 # get numpy include dir:
-execute_process(COMMAND  ${PYTHON_EXECUTABLE} "-c" "import numpy; print(numpy.get_include())" OUTPUT_VARIABLE NUMPY_INCLUDE_DIR)
-target_include_directories(melissa_server PRIVATE ${NUMPY_INCLUDE_DIR})
+target_include_directories(melissa_server PRIVATE ${NUMPY_INCLUDE_DIRS})
+message("numpy ${NUMPY_INCLUDE_DIRS}")
 
 
 target_link_libraries(melissa_server ${PYTHON_LIBRARY})
