Improve error logs if not well configured for testing

--- a/melissa-da_set_env.sh.in
+++ b/melissa-da_set_env.sh.in
@@ -13,6 +13,7 @@ export MELISSA_DA_PATH=@CMAKE_INSTALL_PREFIX@
 export MELISSA_DA_SOURCE_PATH=@CMAKE_SOURCE_DIR@
 export MELISSA_DA_DATADIR=@DATADIR_INSTALL@
 export MELISSA_DA_WITH_FTI=@WITH_FTI@
+export MELISSA_DA_REPORT_TIMING=@REPORT_TIMING@
 
 export MPIEXEC=@MPIEXEC@
 
