--- a/examples/simulation2-pdaf/CMakeLists.txt
+++ b/examples/simulation2-pdaf/CMakeLists.txt
@@ -21,8 +21,11 @@ target_include_directories(simulation2-pdaf PRIVATE ${CMAKE_BINARY_DIR}/include)
 
 INSTALL(TARGETS simulation2-pdaf RUNTIME DESTINATION bin)
 #${CMAKE_CURRENT_SOURCE_DIR}/test.sh
+
+clean_up_test()
 add_test(NAME simulation2-pdaf
     COMMAND ${in_env} python3 ./script.py
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+clean_up_test()
 
 python_test("test-example-simulation2")
