--- a/examples/simulation3-empty/CMakeLists.txt
+++ b/examples/simulation3-empty/CMakeLists.txt
@@ -3,6 +3,8 @@ add_executable(simulation3-empty simulation.cxx)
 target_link_libraries(simulation3-empty melissa_api)
 INSTALL(TARGETS simulation3-empty RUNTIME DESTINATION bin)
 
+clean_up_test()
 add_test(NAME simulation3-empty
     COMMAND ${in_env} python3 ./script.py
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+clean_up_test()
