--- a/examples/simulation3-empty/CMakeLists.txt
+++ b/examples/simulation3-empty/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 add_executable(simulation3-empty simulation.cxx)
-target_link_libraries(simulation3-empty melissa_api)
+target_link_libraries(simulation3-empty melissa_da_api)
 INSTALL(TARGETS simulation3-empty RUNTIME DESTINATION bin)
 
 add_test(NAME simulation3-empty
