--- a/MelissaDAConfig.cmake.in
+++ b/MelissaDAConfig.cmake.in
@@ -1,14 +1,14 @@
 # Melissa cmake module
 # This module sets the following variables in your project::
 #
-#   Melissa_FOUND - true if Melissa found on the system
-#   Melissa_INCLUDE_DIR - the directory containing Melissa headers
-#   Melissa_LIBRARY - the library for Melissa API
-#   Melissa_STATIC_LIBRARY - the statistics internal library
+#   MelissaDA_FOUND - true if Melissa found on the system
+#   MelissaDA_INCLUDE_DIR - the directory containing Melissa headers
+#   MelissaDA_LIBRARY - the library for Melissa API
+#   MelissaDA_STATIC_LIBRARY - the statistics internal library
 
 @PACKAGE_INIT@
 
-set(PN Melissa)
+set(PN MelissaDA)
 set_and_check(${PN}_INCLUDE_DIR "@CMAKE_INSTALL_PREFIX@/include")
 set_and_check(${PN}_LIBRARY "@CMAKE_INSTALL_PREFIX@/lib/libmelissa_api.so")
 
