Move ZeroMQ smart pointer implementation
Make the 0MQ smart pointers available to the client API.

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,12 +1,10 @@
-file(GLOB
-     ALL_COMMON
-     RELATIVE
-     ${CMAKE_CURRENT_SOURCE_DIR}
-     *.c
-     *.cxx
-     )
+add_library(melissa_common OBJECT
+    Part.cxx
+    ZeroMQ.cxx
+    melissa_utils.c
+    utils.cxx
+)
 
-add_library(melissa_common OBJECT ${ALL_COMMON})
 
 if(INSTALL_ZMQ)
   add_dependencies(melissa_common ZeroMQ)
