--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,13 +10,13 @@ debian/9/amd64:
    - cd build
    - bash ../build-and-test.sh .. ~/PDAF-D_V1.15 ~/fti
 
-ubuntu/20.04:
-  image: datamove/ubuntu/20.04
-  tags:
-    - docker
-  script:
-    - export MALLOC_CHECK_=3
-    - export MALLOC_PERTURB_=1
-    - mkdir build
-    - cd build
-    - bash ../build-and-test.sh .. ~/PDAF-D_V1.15 ~/fti
+#ubuntu/20.04:
+  #image: datamove/ubuntu/20.04
+  #tags:
+    #- docker
+  #script:
+    #- export MALLOC_CHECK_=3
+    #- export MALLOC_PERTURB_=1
+    #- mkdir build
+    #- cd build
+    #- bash ../build-and-test.sh .. ~/PDAF-D_V1.15 ~/fti
