Fix cmakedefine for path names

--- a/common/melissa_da_config.h.in
+++ b/common/melissa_da_config.h.in
@@ -4,4 +4,5 @@
 #cmakedefine REPORT_WORKLOAD
 #cmakedefine RUNNERS_MAY_CRASH
 #cmakedefine SLOW_MPI
-#cmakedefine SLOW_MPI_DIR
+#cmakedefine SLOW_MPI_DIR "@SLOW_MPI_DIR@"
+
