--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_subdirectory(protocol)
+
 add_library(melissa_common OBJECT
     Part.cxx
     ZeroMQ.cxx
@@ -7,14 +9,15 @@ add_library(melissa_common OBJECT
 )
 
 
+
+target_compile_options(melissa_common BEFORE PUBLIC -fPIC)
+
+
 if(INSTALL_ZMQ)
   add_dependencies(melissa_common ZeroMQ)
 endif(INSTALL_ZMQ)
 
-target_compile_options(melissa_common BEFORE PUBLIC -fPIC)
-
 install(FILES melissa_da_stype.h DESTINATION include)
-
 
 # comm4py
 
