--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(simulation1)
 add_subdirectory(simulation2-pdaf)
 add_subdirectory(simulation3-empty)
 add_subdirectory(simulation5-python)
+add_subdirectory(p2p)
